# Learned-Range-Filters-Bench

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  go.mod
bench/: batch_test.go  comparison_test.go  fallback_policy_test.go  framework_test.go  hybrid_compare_test.go  keygen_test.go  performance_test.go  querygen_test.go  sosd_fb_dist_test.go  sosd_test.go  throughput_test.go
bench/sosd_data/: README.md  download.sh
bench_results/: industry_analysis.md
bench_results/data/N1048576/clustered/: L1.json  L1024.json  L128.json  L16.json
bench_results/data/N1048576/sosd_fb/: L1.json  L1024.json  L128.json  L16.json
bench_results/data/N1048576/sosd_osm/: L1.json  L16.json
bench_results/data/N1048576/sosd_wiki/: L1.json  L1024.json  L128.json  L16.json
bench_results/data/N1048576/spread/: L1.json  L1024.json  L128.json  L16.json
bench_results/data/N1048576/uniform/: L1.json  L1024.json  L128.json  L16.json
bench_results/data/N1048576/zipfian/: L1.json  L1024.json  L128.json  L16.json
bench_results/data/N16777216/sosd_fb/: L1.json  L128.json  L16.json
bench_results/data/N16777216/sosd_wiki/: L1.json  L1024.json  L128.json  L16.json
bench_results/data/N262144/clustered/: L1.json  L1024.json  L128.json  L16.json
bench_results/data/N262144/sosd_fb/: L1.json  L1024.json  L128.json  L16.json
bench_results/data/N262144/sosd_osm/: L1.json  L1024.json  L128.json  L16.json
bench_results/data/N262144/sosd_wiki/: L1.json  L1024.json  L128.json  L16.json
bench_results/data/N262144/spread/: L1.json  L1024.json  L128.json  L16.json
bench_results/data/build_throughput/: clustered.json  spread.json  uniform.json  zipfian.json
docs/: soda_spread_finding.md
grafite/: CMakeLists.txt  Makefile  grafite.go  wrapper.h
grafite/cpp/: wrapper.cpp
snarf/: CMakeLists.txt  snarf.go  wrapper.h
snarf/cpp/: wrapper.cpp
surf/: CMakeLists.txt  Makefile  surf.go  wrapper.h
surf/arm_shims/: emmintrin.h
surf/cpp/: wrapper.cpp
(+36 files in other folders)
